Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27632

Qt should have an option to stop it from disabling keyboard/mouse grab

    XMLWordPrintable

Details

    • 2ca6606dca44253df49f4805028a9878e4fa0237

    Description

      Qt 5 should support the -nograb option again. This disabled the keyboard/mouse grabbing in Qt4 and was disabled when running in a debugger by default.

      Currently debugging Qt5 apps can make the system unusable when a breakpoint is hit while grabs are in effect.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kleint Friedemann Kleint
              hunger Tobias Hunger
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes