src/gui/kernel/qguiapplication_p.h
@@ -220,6 +220,7 @@ public:
 
     QStyleHints *styleHints;
     static bool obey_desktop_settings;
+    static bool noGrab;
     QInputMethod *inputMethod;
 
     static QList<QObject *> generic_plugin_list;
